<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:paddingBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/feature_image_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_140sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/feature_image_card"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_140sdp"
                    style="@style/AdsCardViewStyle"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    >
                    <ImageView
                        android:id="@+id/iv_feature_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        />
                </com.google.android.material.card.MaterialCardView>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ad"
                    android:textSize="@dimen/_10ssp"
                    android:textColor="@color/white"
                    android:padding="10dp"
                    android:background="@drawable/bg_ads_notify_red"
                    app:layout_constraintEnd_toEndOf="@+id/feature_image_card"
                    app:layout_constraintTop_toTopOf="@+id/feature_image_card"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>



        <com.google.android.material.card.MaterialCardView
            android:id="@+id/ad_app_icon_card"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="5dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@+id/feature_image_container"
            app:layout_constraintBottom_toBottomOf="@+id/feature_image_container"
            app:layout_constraintEnd_toEndOf="@id/feature_image_container"
            app:layout_constraintStart_toStartOf="@id/feature_image_container"
            >
            <ImageView
                android:id="@+id/iv_app_logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:maxLines="1"
            android:ellipsize="end"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/ad_app_icon_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingHorizontal="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            />

        <TextView
            android:id="@+id/tv_app_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/light_black"
            android:textSize="@dimen/_11ssp"
            android:maxLines="3"
            android:ellipsize="end"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/tv_app_name"
            android:layout_marginHorizontal="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/tv_app_description"
            app:layout_constraintEnd_toEndOf="@+id/tv_app_description"
            app:layout_constraintStart_toStartOf="@+id/tv_app_description"
            >

            <ImageView
                android:id="@+id/iv_start_rating"
                android:layout_width="0dp"
                android:layout_height="@dimen/_15sdp"
                android:src="@drawable/ic_rating_starts"
                android:layout_marginHorizontal="@dimen/_20sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_play_store"
                app:layout_constraintTop_toTopOf="@+id/iv_play_store"
                app:layout_constraintBottom_toBottomOf="@+id/iv_play_store"
                />

            <ImageView
                android:id="@+id/iv_play_store"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_play_store"
                android:layout_marginHorizontal="@dimen/_10sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_start_rating"
                 />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:gravity="center"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_install"
                app:layout_constraintTop_toBottomOf="@+id/iv_play_store"
                />

            <Button
                android:id="@+id/btn_install"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"
                android:text="@string/install"
                android:textAllCaps="false"
                style="@style/Widget.MaterialComponents.Button"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                android:gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_cancel"
                app:layout_constraintTop_toBottomOf="@+id/iv_play_store"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
